...
        android:background="#D3D3D3"
        android:padding="16dp"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/studyGroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Member List"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Scrollable member list section -->
...
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/chatBoxButton"
            android:layout_width="10dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:contentDescription="Chat Box"
...
            android:background="#E0E0E0"
            android:text="Add Session"
            android:textColor="#000000"
            android:textSize="8sp" />

        <Button
            android:id="@+id/resourcesButton"
            android:layout_width="10dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="#E0E0E0"
            android:text="Reso-urces"
...
