...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUsernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="#2196F3"
        app:hintTextColor="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginPageLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:backgroundTint="#2196F3"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
...
